DemoApi3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees
  namespace: demogrupo1-aks-ingress
spec:
  selector:
    matchLabels:
      app: employees
  replicas: 2
  template:
    metadata:
      labels:
        app: employees
    spec:
      containers:
      - name: employees
        image: demogrupo1cr.azurecr.io/employees:latest
        ports:
        - containerPort: 80
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
    name: employees
    namespace: demogrupo1-aks-ingress
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 5000
      targetPort: 443
  selector:
    app: employees
  type: ClusterIP
